--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,18 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* TailwindのリセットCSSを上書きする */
+/* https://unpkg.com/tailwindcss@3.3.3/src/css/preflight.css */
+
+:root {
+  --base-line-height: 1.75;
+}
+
+html {
+  line-height: var(--base-line-height);
+}
+
+body {
+  line-height: inherit;
+}
