refactor: マーカー色を限定

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -25,7 +25,7 @@ body {
 
   background: linear-gradient(
     to top,
-    theme(colors.yellow.300) var(--width),
+    theme(colors.maker) var(--width),
     transparent var(--width)
   );
 }
