--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -20,7 +20,7 @@ body {
 /* utils */
 /* -------------------------------------------------------- */
 
-.maker {
+.marker {
   --start: 10%;
   --end: 35%;
 
@@ -28,8 +28,8 @@ body {
     to top,
     transparent 0%,
     transparent var(--start),
-    theme(colors.maker) var(--start),
-    theme(colors.maker) var(--end),
+    theme(colors.marker) var(--start),
+    theme(colors.marker) var(--end),
     transparent var(--end),
     transparent 100%
   );
